workspace = { members = ["core", "net/wasabi"] }
[package]
name = "browser"
version = "0.1.0"
edition = "2021"
default-run = "browser"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "browser"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
# Dependencies used for browser on WasabiOS
saba_core = { path = "./core"}
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
net_wasabi = { path = "./net/wasabi", optional = true }
